AC_INIT(src/Q.cpp)

PACKAGE=Q
VERSION=1.1.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_LANG_PUSH([C++])
AC_CHECK_HEADERS([boost/foreach.hpp], [],
    [AC_MSG_ERROR(You need to install the Boost libraries before compiling Q.)])
AC_LANG_POP([C++])


AC_CHECK_LIB([bz2],[BZ2_bzBuffToBuffCompress],[],[
	echo "Error: You need to install the libbz2-dev library - see online tutorial of Q." 
	exit -1
	])

AC_CHECK_LIB([z], [compress2],[] ,[
	echo "Error: You need to install the zlib1g-dev library - see online tutorial of Q." 
	exit -1
	])


AC_CHECK_LIB([gomp],[omp_get_num_threads],[],[
	echo "Error: You need to install the libgomp1-dev library - see online tutorial of Q." 
	exit -1
	])


AC_PROG_CXX

AC_OUTPUT(Makefile src/Makefile)

